testsuite/tests/deriving/should_fail/T1133A.hs

module T1133A where

import {-# SOURCE #-} T1133A

newtype X = X Int deriving Enum
