testsuite/tests/deriving/should_fail/T1133A.stderr

T1133A.hs:7:28: error: [GHC-30750]
    • Can't make a derived instance of ‘Enum X’:
        ‘X’ must be an enumeration type
        (an enumeration consists of one or more nullary, non-GADT constructors)
    • In the newtype declaration for ‘X’
    Suggested fix:
      Perhaps you intended to use the ‘GeneralizedNewtypeDeriving’ extension
      for GHC's newtype-deriving extension
